// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Full schedule > Should return NO_LESSON_MESSAGE for each day 1`] = `
"
🛑 <b>Monday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Tuesday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Wednesday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Thursday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Friday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 1`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Лекция:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407 

⏰ 13:45 - 15:15
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 408

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Лекция:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 11:35 - 13:05
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 411
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 2`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Лекция:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Лекция:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 13:45 - 15:15
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК-402 

⏰ 13:45 - 15:15
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК-402

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 3`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Лекция:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407 

⏰ 13:45 - 15:15
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 408

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Лекция:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярева В.В
ЛК-411

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 11:35 - 13:05
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 411
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 4`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Лекция:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Лекция:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 13:45 - 15:15
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК-402 

⏰ 13:45 - 15:15
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК-402

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 5`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Лекция:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407 

⏰ 13:45 - 15:15
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 408

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Лекция:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярева В.В
ЛК-411

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 6`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Лекция:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Лекция:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 13:45 - 15:15
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Лекция:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК-402

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 7`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407 

⏰ 13:45 - 15:15
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 408

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК-407 

⏰ 13:45 - 15:15
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК-407

🛑 <b>Friday</b>:

 ⏰ 08:15 - 09:45
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507 

⏰ 09:55 - 11:25
Практика:
<b>Управление рисками инновационной деятельности</b>
Сергеева К.Н.
ЛК - 507
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 8`] = `
"
🛑 <b>Monday</b>:

 ⏰ 08:15 - 09:45
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 09:55 - 11:25
Практика:
<b>Организационное сопровождение стартапа</b>
Дегтярёва В.В.
ЛК - 538 

⏰ 11:35 - 13:05
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК - 407

🛑 <b>Tuesday</b>:

 ⏰ 08:15 - 15:15
Практика:
<b>Проектное обучение</b>

🛑 <b>Wednesday</b>:

 ⏰ 09:55 - 11:25
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402 

⏰ 11:35 - 13:05
Практика:
<b>Управление развитием инновационного продукта</b>
Дегтярёва В.В.
ЛК - 402

🛑 <b>Thursday</b>:

 ⏰ 08:15 - 09:45
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 09:55 - 11:25
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК - 407 

⏰ 11:35 - 13:05
Практика:
<b>Разработка бизнес-плана инновационного проекта</b>
Дзюрдзя О.А.
ЛК-402

🛑 <b>Friday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 9`] = `
"
🛑 <b>Monday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Tuesday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Wednesday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Thursday</b>:

 ⏰ 11:35 - 13:05
Практика:
<b>Проектирование инвестиционного меморандума</b>
Бигачева Е.Н.
ЛК-407

🛑 <b>Friday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>
"
`;

exports[`Full schedule > The function should return the complete schedule for the week 10`] = `
"
🛑 <b>Monday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Tuesday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Wednesday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Thursday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>

🛑 <b>Friday</b>:

 <b>🎉 Занятий нет, можно отдыхать.</b>
"
`;
